# pagas

./: .gitignore  LICENSE  README.md  environment.yml  eval.sh  pyproject.toml  requirements.txt  rerun.rbl  train.py
datareader/: colmap.py  downscale.py  image_ops.py  normalize.py  utils.py  view_selection.py
experiments/: consistent_depth_DTU.sh  consistent_depth_TNT.sh  fuse_depth_DTU.sh  fuse_depth_TNT.sh  mesh_to_depth_DTU.sh  mesh_to_depth_TNT.sh  run_pagas_DTU.sh  run_pagas_TNT.sh  run_pagas_TNT_exposure.sh
pagas/: __init__.py  geo_ops.py  loss.py  splat_ops.py  utils.py  version.py
scripts/: compute_tsdf_params.py  consistent_depth.py  crop_dtu_2dgs_masks.py  dtu_eval.py  fuse_depth.py  fuse_depth.sh  log.py  mesh_to_depth.py  mesh_to_depth.sh  metrics.py  run_automatic.sh  run_colmap.sh  run_pagas.sh  seed.py  tnt_eval.py
scripts/eval_dtu/: eval.py  evaluate_single_scene.py  read_results_DTU.py  render_utils.py
scripts/eval_tnt/: evaluate_single_scene.py  read_results_TNT.py
